--- a/TodoApp/Views/Zgloszenia/Create.cshtml
+++ b/TodoApp/Views/Zgloszenia/Create.cshtml
@@ -1,7 +1,6 @@
-﻿<!-- Views/Advertisement/Create.cshtml -->
-@model Zgloszenia
+﻿@model Zgloszenia
 
-<h2>Create Advertisement</h2>
+<h2>Utworz oglosznie</h2>
 
 <form asp-action="Create">
     <div class="form-group">
@@ -16,5 +15,5 @@
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary">Stworz</button>
 </form>
