--- a/TodoApp/Views/ToDo/Create.cshtml
+++ b/TodoApp/Views/ToDo/Create.cshtml
@@ -1,10 +1,10 @@
 @model TodoApp.Models.ToDo
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Tworzenie";
 }
 
-<h1>Create</h1>
+<h1>Tworzenie zadania</h1>
 
 <h4>ToDo</h4>
 <hr />
@@ -31,13 +31,13 @@
                 <select asp-for="StatusId" class ="form-control" asp-items="ViewBag.StatusId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Utworz" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Wroc do listy</a>
 </div>
 
