--- a/TodoApp/Views/ToDo/Index.cshtml
+++ b/TodoApp/Views/ToDo/Index.cshtml
@@ -1,19 +1,19 @@
 @model IEnumerable<TodoApp.Models.ToDo>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Zadania";
 }
 
-<h1>Index</h1>
+<h1>Lista zadan</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Utworz</a>
 </p>
 <div class="row">
 	<div class="col-md-2">
 		<form asp-action="Index" method="get">
 			<div class="mb-3 form-action">
-				<label class="form-label">Category</label>
+				<label class="form-label">Kategorie:</label>
                 <select name="CategoryId" class="form-select"
                         asp-items="ViewBag.Categories">
 				</select>
@@ -25,8 +25,8 @@
                         asp-items="ViewBag.Statuses">
                 </select>
             </div>
-            <input type="submit" value="Filter" class="btn btn-primary"/>
-			<a asp-action="Index" asp-route-CategoryId="1" asp-route-StatusId="1" class="btn btn-primary">Clear</a>
+            <input type="submit" value="Filtruj" class="btn btn-primary"/>
+			<a asp-action="Index" asp-route-CategoryId="1" asp-route-StatusId="1" class="btn btn-primary">Wyczysc</a>
 		</form>
 	</div>
 
@@ -64,9 +64,9 @@
                     @Html.DisplayFor(modelItem => item.Status.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edytuj</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Usun</a>
+                </td>   
             </tr>
     }
         </tbody>
